--- a/style.css
+++ b/style.css
@@ -30,10 +30,10 @@ header div {
 header div h1 {
   font-family: "trueno";
   color: #F1C849;
-  font-size: 2.8rem;
+  font-size: 2.6rem;
   margin: 0;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   text-align: center;
 }
 
@@ -79,6 +79,15 @@ header div h1 {
 }
 .choix-menu .menu-note-enchantee p {
   margin-top: 2px;
+}
+.choix-menu .element-menu {
+  transform: scale(1);
+  opacity: 1;
+  transition: all 300ms ease-in-out;
+}
+.choix-menu .element-menu:hover {
+  transform: scale(1.1);
+  opacity: 0.75;
 }
 .choix-menu .menu-chic-francaise {
   background-color: #fef5ff;
@@ -166,21 +175,21 @@ footer .mentions-légales {
   margin: 0 0 0 20px;
 }
 footer .mentions-légales:hover {
-  animation: wiggle 0.82s;
-  transform: translate(0, 0);
+  animation: wiggle 1s;
+  transform: translateX(0);
 }
 @keyframes wiggle {
   10%, 90% {
-    transform: translate(-1px, 0);
+    transform: translateX(-1px);
   }
   20%, 80% {
-    transform: translate(2px, 0);
+    transform: translateX(2px);
   }
   30%, 50%, 70% {
-    transform: translate(-4px, 0);
+    transform: translateX(-4px);
   }
   40%, 60% {
-    transform: translate(4px, 0);
+    transform: translateX(4px);
   }
 }
 footer .contactez-nous {
