--- a/style.scss
+++ b/style.scss
@@ -34,10 +34,10 @@ header {
         h1 {
             font-family: 'trueno';
             color: $couleur_texte;
-            font-size: 2.8rem;
+            font-size: 2.6rem;
             margin: 0;
-            padding-top: 30px;
-            padding-bottom: 30px;
+            padding-top: 25px;
+            padding-bottom: 25px;
             text-align: center;
         }
     }
@@ -77,7 +77,7 @@ header {
         padding: 200px 0 200px 0;
         margin-right: 20px;
         font-family: 'Devonshire', cursive;
-
+        
         h3 {
             font-family: 'Kalam', cursive;
         }
@@ -93,6 +93,17 @@ header {
             margin-top: 2px;
         }
         
+    }
+
+    .element-menu {
+        transform: scale(1);
+        opacity: 1;
+        transition: all 300ms ease-in-out;
+        
+        &:hover {
+        transform: scale(1.10);
+        opacity: 0.75;
+        }
     }
 
     .menu-chic-francaise {
@@ -156,6 +167,7 @@ header {
 
 }
 
+
 .bouton-prochainement {
     display: block;
     overflow-wrap: break-word;
@@ -169,8 +181,11 @@ header {
     background-color: $couleur_fond;
     color: $couleur_texte;
     font-family: 'truenolight';
-
+    
 }
+
+
+
 
 /* Footer */
 
@@ -195,26 +210,26 @@ footer {
             margin: 0 0 0 20px;
             
             &:hover {
-                animation: wiggle 0.82s; 
-                transform: translate(0, 0); 
+                animation: wiggle 1s; 
+                transform: translateX(0); 
             }
         }
 
         @keyframes wiggle { 
             10%, 90% { 
-            transform: translate(-1px, 0); 
+            transform: translateX(-1px); 
             } 
         
             20%, 80% { 
-            transform: translate(2px, 0); 
+            transform: translateX(2px); 
             } 
         
             30%, 50%, 70% { 
-            transform: translate(-4px, 0); 
+            transform: translateX(-4px); 
             } 
         
             40%, 60% { 
-            transform: translate(4px, 0); 
+            transform: translateX(4px); 
             } 
         }
 
