--- a/style.css
+++ b/style.css
@@ -19,15 +19,15 @@ html, body {
 }
 
 /* Header */
-header {
+.bandeau_page_principale {
   width: 100%;
 }
-header div {
+.bandeau_page_principale div {
   background-color: #549B85;
   margin: 0;
   padding: 0;
 }
-header div h1 {
+.bandeau_page_principale div h1 {
   font-family: "trueno";
   color: #F1C849;
   font-size: 2.6rem;
@@ -38,7 +38,8 @@ header div h1 {
 }
 
 /* Section centrale */
-.choix-menu {
+/* PARAMETRE MENU */
+.bloc_central {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -46,99 +47,107 @@ header div h1 {
   width: 100%;
   margin: 0 0 30px 0;
   padding: 0;
+  /* MENU NOTE ENCHANTEE */
+  /* MENU CHIC FRANCAISE */
+  /* MENU DELICE PAPILLES */
+  /* MENU PALETTE GOUT */
 }
-.choix-menu > div {
+.bloc_central > div {
   box-shadow: 0px 0px 5px 2px #ededed;
   margin: 40px 0 20px 0;
   padding: 0;
   width: 36%;
 }
-.choix-menu h3 {
+.bloc_central h3 {
   font-size: 2rem;
   margin-top: 0;
 }
-.choix-menu p {
+.bloc_central p {
   margin-bottom: 10px;
 }
-.choix-menu .menu-note-enchantee {
+.bloc_central .menu-note-enchantee {
   background-color: #fcdfdb;
-  color: #3c1218;
   text-align: center;
   padding: 200px 0 200px 0;
   margin-right: 20px;
   font-family: "Devonshire", cursive;
 }
-.choix-menu .menu-note-enchantee h3 {
+.bloc_central .menu-note-enchantee h3 {
   font-family: "Kalam", cursive;
 }
-.choix-menu .menu-note-enchantee i {
+.bloc_central .menu-note-enchantee i {
   font-size: 2rem;
   background: linear-gradient(to right, #F0505F, #F78F6A);
   -webkit-background-clip: text;
   color: transparent;
 }
-.choix-menu .menu-note-enchantee p {
+.bloc_central .menu-note-enchantee p {
   margin-top: 2px;
 }
-.choix-menu .element-menu {
+.bloc_central .menu-note-enchantee a {
+  text-decoration: none;
+  color: #3c1218;
+}
+.bloc_central .element-menu {
   transform: scale(1);
   opacity: 1;
   transition: all 300ms ease-in-out;
 }
-.choix-menu .element-menu:hover {
+.bloc_central .element-menu:hover {
   transform: scale(1.1);
   opacity: 0.75;
 }
-.choix-menu .menu-chic-francaise {
+.bloc_central .menu-chic-francaise {
   background-color: #fef5ff;
   text-align: center;
   padding: 200px 0 200px 0;
   margin-left: 20px;
   font-family: "Croissant One", cursive;
 }
-.choix-menu .menu-chic-francaise p {
+.bloc_central .menu-chic-francaise p {
   background: linear-gradient(to right, #c77412, #925dfc);
   -webkit-background-clip: text;
   color: transparent;
 }
-.choix-menu .menu-chic-francaise h3 {
+.bloc_central .menu-chic-francaise h3 {
   font-family: "Times New Roman", Times, serif;
   font-weight: normal;
   color: #c77412;
 }
-.choix-menu .menu-delice-papilles {
+.bloc_central .menu-delice-papilles {
   background-color: #F9F9F9;
   text-align: center;
   padding: 200px 0 200px 0;
   margin-right: 20px;
   font-family: "Dancing Script", cursive;
 }
-.choix-menu .menu-delice-papilles p {
+.bloc_central .menu-delice-papilles p {
   background: linear-gradient(to right, #2055e6, #5aaffa);
   -webkit-background-clip: text;
   color: transparent;
 }
-.choix-menu .menu-delice-papilles h3 {
+.bloc_central .menu-delice-papilles h3 {
   font-family: "Kalam", cursive;
   color: #1b88fb;
 }
-.choix-menu .menu-palette-goût {
+.bloc_central .menu-palette-goût {
   background-color: #FDFFFD;
   text-align: center;
   padding: 200px 0 200px 0;
   margin-left: 20px;
   font-family: "Kaushan Script", cursive;
 }
-.choix-menu .menu-palette-goût p {
+.bloc_central .menu-palette-goût p {
   background: linear-gradient(to right, #42973c, #c6ff8d);
   -webkit-background-clip: text;
   color: transparent;
 }
-.choix-menu .menu-palette-goût h3 {
+.bloc_central .menu-palette-goût h3 {
   font-family: "Kalam", cursive;
   color: #72bf56;
 }
 
+/* BOUTON PROCHAINEMENT */
 .bouton-prochainement {
   display: block;
   overflow-wrap: break-word;
@@ -153,7 +162,46 @@ header div h1 {
   color: #F1C849;
   font-family: "truenolight";
 }
+.bouton-prochainement .point_1 {
+  display: inline-block;
+  animation: point_1 1s ease-in-out;
+  animation-iteration-count: infinite;
+}
+.bouton-prochainement .point_2 {
+  display: inline-block;
+  animation: point_2 0.9s ease-in-out;
+  animation-iteration-count: infinite;
+}
+.bouton-prochainement .point_3 {
+  display: inline-block;
+  animation: point_3 0.8s ease-in-out;
+  animation-iteration-count: infinite;
+}
 
+@keyframes point_1 {
+  0% {
+    transform: translateY(-4px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes point_2 {
+  0% {
+    transform: translateY(-6px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+@keyframes point_3 {
+  0% {
+    transform: translateY(-8px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 /* Footer */
 footer {
   display: flex;
@@ -176,7 +224,6 @@ footer .mentions-légales {
 }
 footer .mentions-légales:hover {
   animation: wiggle 1s;
-  transform: translateX(0);
 }
 @keyframes wiggle {
   10%, 90% {
@@ -200,11 +247,13 @@ footer .contactez-nous:hover {
   transform: translate(0, 0);
 }
 
-/* PAGE MENTION LEGALE */
+/* PAGE: MENTION LEGALE */
 .mentions {
   text-align: center;
   font-family: "trueno";
   color: #549B85;
 }
+
+/* PAGE: MENU - LA NOTE ENCHANTÉE */
 
 /*# sourceMappingURL=style.css.map */
