--- a/style.css
+++ b/style.css
@@ -255,5 +255,56 @@ footer .contactez-nous:hover {
 }
 
 /* PAGE: MENU - LA NOTE ENCHANTÉE */
+.conteneur__note-enchantée {
+  border: 1px solid #fcdfdb;
+  background-color: #fcdfdb;
+  color: #3c1218;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 40px;
+  padding: 70px 80px 70px 80px;
+  width: 65%;
+  font-family: "Kalam", cursive;
+  font-style: normal;
+}
+.conteneur__note-enchantée header {
+  font-family: "Devonshire", cursive;
+  text-align: center;
+}
+.conteneur__note-enchantée header h1 {
+  margin-top: 1px;
+}
+.conteneur__note-enchantée header i {
+  font-size: 3rem;
+  background: linear-gradient(to right, #F0505F, #F78F6A);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+.conteneur__note-enchantée .titre_menu__note-enchantée {
+  text-align: center;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.conteneur__note-enchantée .titre_menu__note-enchantée h3 {
+  margin: 0;
+  padding: 0;
+}
+.conteneur__note-enchantée .menu_description {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+.conteneur__note-enchantée .menu_description p {
+  width: 100%;
+  margin: 0 50px 10px 0;
+}
+.conteneur__note-enchantée .menu_description div {
+  display: flex;
+}
+.conteneur__note-enchantée .menu_description div span {
+  margin-left: 50px;
+}
 
 /*# sourceMappingURL=style.css.map */
