webkit sticky ajouté pour Safari

--- a/style.css
+++ b/style.css
@@ -207,6 +207,8 @@ footer {
   display: flex;
   justify-content: space-between;
   position: sticky;
+  position: -webkit-sticky;
+  /* Safari */
   bottom: 0;
   width: 100%;
   margin: 0;
