--- a/style.scss
+++ b/style.scss
@@ -199,26 +199,32 @@ html,body {
  
     .point_1{
         display: inline-block;
-        animation: point_1 1s ease-in-out;
+        animation: point_1 550ms ease-in-out;
+        animation-delay: 100ms;
         animation-iteration-count: infinite;
+        animation-direction: alternate;
     }
 
     .point_2{
         display: inline-block;
-        animation: point_2 0.9s ease-in-out;
+        animation: point_2 550ms ease-in-out;
+        animation-delay: 200ms;
         animation-iteration-count: infinite;
+        animation-direction: alternate;
     }
 
     .point_3{
         display: inline-block;
-        animation: point_3 0.8s ease-in-out;
+        animation: point_3 550ms ease-in-out;
+        animation-delay: 400ms;
         animation-iteration-count: infinite;
+        animation-direction: alternate;
     }
 }
 
 @keyframes point_1 {
     0%{
-        transform: translateY(-4px);
+        transform: translateY(-3px);
     }
     
     100% {
@@ -228,7 +234,7 @@ html,body {
 
 @keyframes point_2 {
     0%{
-        transform: translateY(-6px);
+        transform: translateY(-3px);
     }
     
     100% {
@@ -238,7 +244,7 @@ html,body {
 
 @keyframes point_3 {
     0%{
-        transform: translateY(-8px);
+        transform: translateY(-3px);
     }
     
     100% {
@@ -311,6 +317,8 @@ footer {
 
 /* PAGE: MENU - LA NOTE ENCHANTÉE */
 
+
+    /* Bloc principal */
 .conteneur__note-enchantée {
     border: 1px solid #fcdfdb;
     background-color: #fcdfdb;
@@ -323,6 +331,7 @@ footer {
     font-family: 'Kalam', cursive;
     font-weight: lighter;
 
+    /* Titre bloc principal */
     .titre_conteneur {
         font-family: 'Devonshire', cursive;
         text-align: center;
@@ -339,6 +348,7 @@ footer {
         }
     }
 
+    /* Titre Entrée, Plat, Dessert */
     .titre_menu__note-enchantée {
 
         text-align: center;
@@ -354,6 +364,7 @@ footer {
 
     }
 
+    /* Description plat - prix */
     .menu_description {
         display: flex;
         flex-wrap: wrap;
@@ -374,6 +385,7 @@ footer {
         }
     }
 
+    /* Footer */
     .titre_footer {
         text-align: center;
         font-family: 'Devonshire', cursive;
@@ -390,41 +402,39 @@ footer {
 
 /* PAGE: MENU - LE CHIC A LA FRANCAISE */
 
+    /* Bloc Principal */
 .conteneur__chic-francaise {
-    border: 1px solid #fcdfdb;
-    background-color: #fcdfdb;
+    border: 1px solid #fef5ff;
+    background-color: #fef5ff;
     color: #3c1218;
     margin-right: auto;
     margin-left: auto;
     margin-top: 2rem;
     padding: 3.5rem 4rem 1rem 4rem;
     width: 65%;
-    font-family: 'Kalam', cursive;
-    font-weight: lighter;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: normal;
 
+    /* Titre bloc Principal */
     .titre_conteneur {
-        font-family: 'Devonshire', cursive;
+        font-family: 'Croissant One', cursive;
         text-align: center;
-
-        h1 {
-            margin-top: 1px;
-        }
-
-        i {
-            font-size: 3rem;
-            background: linear-gradient(to right,#F0505F,#F78F6A); 
-            -webkit-background-clip: text;
-            color: transparent;
-        }
+        background: rgb(225,136,34);
+        background: linear-gradient(90deg, rgba(225,136,34,1) 25%, rgba(179,128,214,1) 55%, rgba(146,95,254,1) 85%);
+        -webkit-background-clip: text;
+        color: transparent;
+        margin-top: 2rem;
+        margin-bottom: 5rem;
     }
 
+    /* Titre Entrée, Plat, Dessert */
     .titre_menu__chic-francaise {
-
         text-align: center;
         font-size: 1.2rem;
         display: flex;
         justify-content: space-between;
         margin-bottom: 10px;
+        color: #c67412;
 
         h3 {
             margin: 0;
@@ -432,10 +442,13 @@ footer {
         }
     }
 
+    /* Description Plat, Prix */
     .menu_description {
         display: flex;
         flex-wrap: wrap;
         margin-bottom: 90px;
+        padding-right: 3rem;
+        padding-left: 3rem;
 
         div {
             display: flex;
@@ -451,18 +464,20 @@ footer {
         }
     }
 
-    .titre_footer {
-        text-align: center;
-        font-family: 'Devonshire', cursive;
-        font-size: 1.5rem;
-
-        i{
-            font-size: 1.8rem;
-            background: linear-gradient(to right,#F0505F,#F78F6A); 
-            -webkit-background-clip: text;
-            color: transparent;
-        }
+    /*  Couleur Entrée, Plat, Dessert */
+    .bloc_entree--couleur{
+        color: #c67412;
     }
+
+    .bloc_plat--couleur{
+        color: #a56799;
+    }
+
+    .bloc_dessert--couleur{
+        color: #6e4ccc;
+    }
+
+    
 }
 
 
