--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -43,7 +43,7 @@ $texte-papilles:#1b88fb;
 
     // Dégradé
     @mixin degrade-papilles {
-        background: linear-gradient(to right, #2055e6, #5aaffa);
+        background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
         -webkit-background-clip: text;
         color: transparent;
     }
@@ -59,7 +59,7 @@ $texte-gout:#72bf56;
 
     // Dégradé
     @mixin degrade-gout {
-        background: linear-gradient(to right, #42973c, #c6ff8d);
+        background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);;
         -webkit-background-clip: text;
         color: transparent;
     }
