--- a/style.css
+++ b/style.css
@@ -141,11 +141,19 @@ footer .contactez-nous:hover {
 }
 .bloc_central .element-menu {
   transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
   opacity: 1;
   transition: all 300ms ease-in-out;
 }
 .bloc_central .element-menu:hover {
   transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
   opacity: 0.75;
 }
 .bloc_central .menu-chic-francaise {
@@ -170,14 +178,14 @@ footer .contactez-nous:hover {
   text-decoration: none;
 }
 .bloc_central .menu-delice-papilles {
-  background-color: background-papilles;
+  background-color: #F9F9F9;
   text-align: center;
   padding: 200px 0 200px 0;
   margin-right: 20px;
   font-family: "Dancing Script", cursive;
 }
 .bloc_central .menu-delice-papilles p {
-  background: linear-gradient(to right, #2055e6, #5aaffa);
+  background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
   -webkit-background-clip: text;
   color: transparent;
 }
@@ -196,13 +204,16 @@ footer .contactez-nous:hover {
   font-family: "Kaushan Script", cursive;
 }
 .bloc_central .menu-palette-goût p {
-  background: linear-gradient(to right, #42973c, #c6ff8d);
+  background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
   -webkit-background-clip: text;
   color: transparent;
 }
 .bloc_central .menu-palette-goût h3 {
   font-family: "Kalam", cursive;
   color: #72bf56;
+}
+.bloc_central .menu-palette-goût a {
+  text-decoration: none;
 }
 
 /* BOUTON PROCHAINEMENT */
@@ -397,6 +408,10 @@ footer .contactez-nous:hover {
   width: 90%;
 }
 .conteneur__chic-francaise .titre_menu__chic-francaise .fleche {
+  -webkit-transform: rotate(1.5turn);
+  -moz-transform: rotate(1.5turn);
+  -ms-transform: rotate(1.5turn);
+  -o-transform: rotate(1.5turn);
   transform: rotate(1.5turn);
 }
 .conteneur__chic-francaise .titre_menu__chic-francaise h3 {
@@ -476,10 +491,10 @@ footer .contactez-nous:hover {
 
 /* PAGE: MENU - LE DELICE DES PAPILLES */
 /* Bloc principal */
-.conteneur__note-enchantée {
-  border: 1px solid #fcdfdb;
-  background-color: #fcdfdb;
-  color: #3c1218;
+.conteneur__délice-papilles {
+  border: 1px solid #F9F9F9;
+  background-color: #F9F9F9;
+  color: black;
   margin-right: auto;
   margin-left: auto;
   margin-top: 2rem;
@@ -492,67 +507,170 @@ footer .contactez-nous:hover {
   /* Description plat - prix */
   /* Footer */
 }
-.conteneur__note-enchantée .titre_conteneur {
-  font-family: "Devonshire", cursive;
-  text-align: center;
-}
-.conteneur__note-enchantée .titre_conteneur h1 {
-  margin-top: 1px;
-}
-.conteneur__note-enchantée .titre_conteneur i {
-  font-size: 3rem;
-  background: linear-gradient(to right, #F0505F, #F78F6A);
+.conteneur__délice-papilles .titre_conteneur {
+  font-family: "Dancing Script", cursive;
+  background: linear-gradient(90deg, #072ddd 25%, #1571f3 55%, #249ef9 85%);
   -webkit-background-clip: text;
   color: transparent;
+  text-align: center;
 }
-.conteneur__note-enchantée .titre_menu__note-enchantée {
+.conteneur__délice-papilles .titre_conteneur h1 {
+  margin-top: 1px;
+  font-size: 2.5rem;
+  font-weight: lighter;
+}
+.conteneur__délice-papilles .titre_menu__délice-papilles {
   text-align: center;
   font-size: 1.2rem;
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
 }
-.conteneur__note-enchantée .titre_menu__note-enchantée h3 {
+.conteneur__délice-papilles .titre_menu__délice-papilles img {
+  width: 90%;
+}
+.conteneur__délice-papilles .titre_menu__délice-papilles .fleche {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.conteneur__délice-papilles .titre_menu__délice-papilles h3 {
   margin: 0;
   padding: 0;
-  display: block;
+  width: 40%;
+  font-weight: lighter;
 }
-.conteneur__note-enchantée .titre_menu__note-enchantée h3::after {
+.conteneur__délice-papilles .titre_menu__délice-papilles .bloc--entree::after, .conteneur__délice-papilles .titre_menu__délice-papilles .bloc--plat::after, .conteneur__délice-papilles .titre_menu__délice-papilles .bloc--dessert::after {
   content: "";
   width: 100%;
   height: 2px;
-  background-color: #3c1218;
+  background-color: #1b88fb;
   display: block;
   transform: scaleX(0);
   transition: transform 300ms ease-in-out;
   transform-origin: 100% 50%;
 }
-.conteneur__note-enchantée .titre_menu__note-enchantée h3:hover::after {
+.conteneur__délice-papilles .titre_menu__délice-papilles .bloc--entree:hover::after, .conteneur__délice-papilles .titre_menu__délice-papilles .bloc--plat:hover::after, .conteneur__délice-papilles .titre_menu__délice-papilles .bloc--dessert:hover::after {
   transform: scaleX(1);
   transform-origin: 0% 50%;
 }
-.conteneur__note-enchantée .menu_description {
+.conteneur__délice-papilles .menu_description {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 90px;
+  padding-right: 3rem;
+  padding-left: 3rem;
 }
-.conteneur__note-enchantée .menu_description div {
+.conteneur__délice-papilles .menu_description div {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
-.conteneur__note-enchantée .menu_description p {
+.conteneur__délice-papilles .menu_description p {
   margin-bottom: 1px;
 }
-.conteneur__note-enchantée .menu_description .prix {
-  font-weight: bold;
-}
-.conteneur__note-enchantée .titre_footer {
+.conteneur__délice-papilles .titre_footer {
   text-align: center;
   font-family: "Devonshire", cursive;
   font-size: 1.5rem;
 }
-.conteneur__note-enchantée .titre_footer i {
+.conteneur__délice-papilles .titre_footer i {
+  font-size: 1.8rem;
+  background: linear-gradient(to right, #F0505F, #F78F6A);
+  -webkit-background-clip: text;
+  color: transparent;
+}
+
+/* PAGE: MENU - LA PALETTE DU GOÛT */
+/* Bloc principal */
+.conteneur__palette-gout {
+  border: 1px solid #FDFFFD;
+  background-color: #FDFFFD;
+  color: black;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 2rem;
+  padding: 3.5rem 4rem 1rem 4rem;
+  width: 65%;
+  font-family: "Kalam", cursive;
+  font-weight: lighter;
+  /* Titre bloc principal */
+  /* Titre Entrée, Plat, Dessert */
+  /* Description plat - prix */
+  /* Footer */
+}
+.conteneur__palette-gout .titre_conteneur {
+  font-family: "Kaushan Script", cursive;
+  background: linear-gradient(90deg, #479a44 25%, #83cd60 55%, #BEFF7F 85%);
+  -webkit-background-clip: text;
+  color: transparent;
+  text-align: center;
+}
+.conteneur__palette-gout .titre_conteneur h1 {
+  margin-top: 1px;
+  font-size: 2.5rem;
+  font-weight: lighter;
+}
+.conteneur__palette-gout .titre_menu__palette-gout {
+  text-align: center;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.conteneur__palette-gout .titre_menu__palette-gout img {
+  width: 90%;
+}
+.conteneur__palette-gout .titre_menu__palette-gout .fleche {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+}
+.conteneur__palette-gout .titre_menu__palette-gout h3 {
+  margin: 0;
+  padding: 0;
+  width: 40%;
+  font-weight: lighter;
+}
+.conteneur__palette-gout .titre_menu__palette-gout .bloc--entree::after, .conteneur__palette-gout .titre_menu__palette-gout .bloc--plat::after, .conteneur__palette-gout .titre_menu__palette-gout .bloc--dessert::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #72bf56;
+  display: block;
+  transform: scaleX(0);
+  transition: transform 300ms ease-in-out;
+  transform-origin: 100% 50%;
+}
+.conteneur__palette-gout .titre_menu__palette-gout .bloc--entree:hover::after, .conteneur__palette-gout .titre_menu__palette-gout .bloc--plat:hover::after, .conteneur__palette-gout .titre_menu__palette-gout .bloc--dessert:hover::after {
+  transform: scaleX(1);
+  transform-origin: 0% 50%;
+}
+.conteneur__palette-gout .menu_description {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 90px;
+  padding-right: 3rem;
+  padding-left: 3rem;
+}
+.conteneur__palette-gout .menu_description div {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.conteneur__palette-gout .menu_description p {
+  margin-bottom: 1px;
+}
+.conteneur__palette-gout .titre_footer {
+  text-align: center;
+  font-family: "Devonshire", cursive;
+  font-size: 1.5rem;
+}
+.conteneur__palette-gout .titre_footer i {
   font-size: 1.8rem;
   background: linear-gradient(to right, #F0505F, #F78F6A);
   -webkit-background-clip: text;
